# gpt-01

./: build.sh  server.crt  server.key
ecs-realm-server/: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  Boost-Target-release.cmake  Boost-release-x86_64-data.cmake  BoostConfig.cmake  CHANGELOG.md  CLI11-Target-release.cmake  CLI11-release-x86_64-data.cmake  CLI11Config.cmake  CLI11Targets.cmake  CMakeLists.txt  CMakeLists.txt.minimal  CMakePresets.json  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  DEPLOYMENT_READINESS_ASSESSMENT.md  Dockerfile  FindBZip2.cmake  FindOpenSSL.cmake  FindProtobuf.cmake  GTest-release-x86_64-data.cmake  Makefile  OpenSSL-release-x86_64-data.cmake  OpenSSLConfig.cmake  OpenSSLConfigVersion.cmake  README.md  ZLIB-release-x86_64-data.cmake  benchmark-config-version.cmake  benchmark-config.cmake  benchmark-release-x86_64-data.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  (+39 more)
ecs-realm-server/client/simple_client/: main.cpp
ecs-realm-server/config/: server.yaml
ecs-realm-server/deployment-guide/: 00_deployment_overview.md  01_infrastructure_setup.md  02_cloud_resources.md  03_cicd_pipeline.md  04_docker_registry.md  05_monitoring_setup.md  06_logging_system.md  07_security_checklist.md  08_ssl_certificates.md  09_testing_strategy.md  10_deployment_steps.md  11_rollback_plan.md  12_operation_runbook.md  13_scaling_strategy.md
ecs-realm-server/docs/: ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  README.md
ecs-realm-server/docs/development/: DEVELOPMENT_JOURNEY.md  DEVELOPMENT_JOURNEY_ko.md  PROJECT_SUMMARY.md  TEST_JOURNEY.md
ecs-realm-server/docs/guides/: DEPLOYMENT_GUIDE.md  DEVOPS_GUIDE.md  FINAL_EXECUTION_GUIDE.md  KNOWLEDGE_ENHANCEMENT_GUIDE.md  LEARNING_GUIDE.md  SECURITY_GUIDE.md
ecs-realm-server/docs/operations/: DATABASE_SCHEMA.md  PRODUCTION_REALITY_CHECK.md
ecs-realm-server/docs/roadmaps/: COMPLETE_ROADMAP.md  FutureExtensionPlan.md
ecs-realm-server/for_senior/: README.md
ecs-realm-server/for_senior/01_memory_optimization/: cache_friendly_design.md  custom_allocators.md  memory_pools.md  numa_awareness.md
ecs-realm-server/for_senior/02_cpu_optimization/: branch_prediction.md  cpu_cache_optimization.md  lock_free_programming.md  simd_vectorization.md
ecs-realm-server/for_senior/03_network_optimization/: batch_processing.md  kernel_bypass.md  protocol_optimization.md  zero_copy_networking.md
ecs-realm-server/for_senior/04_profiling_benchmarking/: flame_graphs.md  perf_analysis.md  production_monitoring.md  vtune_optimization.md
ecs-realm-server/for_senior/05_hardware_specific/: arm_considerations.md  gpu_compute.md  storage_optimization.md  x86_optimizations.md
ecs-realm-server/for_senior/06_production_warfare/: optimization_case_studies.md  performance_war_stories.md  scaling_disasters.md  senior_interview_prep.md
ecs-realm-server/interview/: README.md  advanced_technical.md  behavioral_questions.md  collaboration_process.md  debugging_optimization.md  devops_practices.md  game_domain_specific.md  game_server_architecture.md  problem_solving_cases.md  realtime_multiplayer.md  server_operations.md  system_design_interview.md  tech_trends.md
ecs-realm-server/k8s/: configmap.yaml  deployment.yaml  service.yaml
ecs-realm-server/k8s/base/: configmap.yaml  deployment.yaml  namespace.yaml
ecs-realm-server/knowledge/: ESSENTIAL_DOCUMENTS_LIST.md  GAME_SERVER_ARCHITECTURE.md  GAME_SERVER_LEARNING_ROADMAP.md  GAME_SERVER_TROUBLESHOOTING.md  MINI_PROJECTS_GUIDE.md  README.md  REFERENCE_IMPROVEMENT_SUMMARY.md  REORGANIZATION_SUMMARY.md  renumber_references.sh  update_document_references.sh
ecs-realm-server/knowledge/appendix/: protocol_buffers_implementation_guide.md  realtime_pvp_systems_guide.md  server_monitoring_metrics_guide.md
ecs-realm-server/knowledge/reference/: 00_cpp_basics_for_game_server.md  01_advanced_cpp_features.md  02_modern_cpp_containers_utilities.md  03_lambda_functional_programming.md  04_move_semantics_perfect_forwarding.md  05_exception_handling_safety.md  06_stl_algorithms_comprehensive.md  07_build_systems_advanced.md  08_testing_frameworks_complete.md  09_debugging_profiling_toolchain.md  10_practical_setup_guide.md  11_multithreading_basics.md  12_lockfree_programming_guide.md  13_network_programming_basics.md  14_advanced_networking_optimization.md  15_game_server_core_concepts.md  16_ecs_architecture_system.md  17_system_separation_world_management.md  18_realtime_physics_synchronization.md  20_database_design_optimization_guide.md  21_nosql_integration_guide.md  22_redis_cluster_caching_master.md  23_advanced_database_operations.md  24_message_queue_systems.md  25_microservices_architecture.md  26_microservices_architecture_advanced.md  27_grpc_services_guide.md  28_event_driven_architecture_guide.md  29_performance_optimization_basics.md  30_performance_engineering_advanced.md  31_security_authentication_guide.md  32_advanced_security_compliance.md  33_kubernetes_operations_guide.md  35_global_service_operations.md  36_realtime_analytics_bigdata_pipeline.md  37_next_gen_game_tech.md  backup_network_programming_basics_old.md  backup_performance_optimization_basics_old.md
ecs-realm-server/knowledge_backup_20250807_025853/: DOCUMENTATION_IMPROVEMENT_SUMMARY.md  ESSENTIAL_DOCUMENTS_LIST.md  GAME_SERVER_ARCHITECTURE.md  GAME_SERVER_LEARNING_ROADMAP.md  GAME_SERVER_TROUBLESHOOTING.md  MINI_PROJECTS_GUIDE.md  REFERENCE_IMPROVEMENT_SUMMARY.md  REORGANIZATION_COMPLETE.md  update_document_references.sh
ecs-realm-server/knowledge_backup_20250807_025853/reference/: 19_ai_game_logic_engine.md  (+38 more)
ecs-realm-server/monitoring/: alerts.yml  prometheus.yml
ecs-realm-server/proto/: auth.proto  common.proto  game.proto  packet.proto  udp_handshake.proto
ecs-realm-server/scripts/: deploy.sh  test.lua
ecs-realm-server/tests/: tier1_integration_test.cpp
test_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
(+449 files in other folders)
